# streamlit-starter-kit

./: Dockerfile  README.md  compose.yml  pyproject.toml
nginx/: nginx.conf
src/streamlit_starter_kit/: app.py  database.py  ml.py  models.py
src/streamlit_starter_kit/data/: model.pkl  scaler.pkl
