[project]
name = "streamlit-starter-kit"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hodaka Mori", email = "hodaka.mori.office@gmail.com" }
]
dependencies = [
    "streamlit>=1.43.0",
    "rdkit>=2024.9.5",
    "scikit-learn>=1.6.1",
    "streamlit-ketcher>=0.0.1",
    "rpy2==3.5.12",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/streamlit_starter_kit"]
